tests/paczka1/fuzzy1/72028890.err
Error in line 2: aDG A586 95,3
Error in line 13: aDG A246 39,8
Error in line 20: WogZehaxcn A456 66,9
Error in line 34: aDG A586 4,3
Error in line 35: aDG A246 87,5
